force-app/main/default/objects/CSBD_Control_Duplicados__mdt/CSBD_Control_Duplicados__mdt.object-meta.xml
<CustomObject>
    <label>CSBD: Control de solicitudes duplicadas</label>
    <pluralLabel>CSBD_Control_Duplicados</pluralLabel>
</CustomObject>