force-app/main/default/objects/CSBD_Control_Duplicados__mdt/fields/CSBD_Campo2__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Campo2__c</fullName>
    <label>Campo oportunidad 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>