force-app/main/default/objects/CSBD_Control_Duplicados__mdt/fields/CSBD_Empresa_Proveedora__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Empresa_Proveedora__c</fullName>
    <label>Empresa proveedora</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Todas</fullName>
                <default>true</default>
                <label>Todas</label>
            </value>
            <value>
                <fullName>CaixaBank</fullName>
            </value>
            <value>
                <fullName>imaginBank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>