force-app/main/default/objects/CSBD_Control_Duplicados__mdt/fields/CSBD_Solo_Circuito_No_Online__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Solo_Circuito_No_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solo para circuito no online</label>
    <type>Checkbox</type>
</CustomField>