force-app/main/default/objects/CSBD_Control_Duplicados__mdt/listViews/CSBD_Todos.listView-meta.xml
<ListView>
    <fullName>CSBD_Todos</fullName>
    <columns>MasterLabel</columns>
    <columns>CSBD_Empresa_Proveedora__c</columns>
    <columns>CSBD_Activo__c</columns>
    <columns>CSBD_Solo_Circuito_No_Online__c</columns>
    <columns>CSBD_Campo1__c</columns>
    <columns>CSBD_Campo2__c</columns>
    <columns>CSBD_Campo3__c</columns>
    <columns>CSBD_Minutos__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>